implemented status in the cards and toggled it

--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
             <p class="post-details text-[#64748B]">
               Remote • Full-time • $130,000 - $175,000
             </p>
-            <p class="state text-[#002C5C]">NOT APPLIED</p>
+            <span class="state"
+              ></span
+            >
             <p class="post-work text-[#323B49] mt-4">
               Build cross-platform mobile applications using React Native. Work
               on products used by millions of users worldwide.
@@ -149,7 +151,9 @@
             <p class="post-details text-[#64748B]">
               Los Angeles, CA • Part-time • $80,000 - $120,000
             </p>
-            <p class="state text-[#002C5C]">NOT APPLIED</p>
+            <span class="state bg-[#EEF4FF] py-2 px-3 text-[#002C5C]"
+              >NOT APPLIED</span
+            >
             <p class="post-work text-[#323B49] mt-4">
               Create stunning web experiences for high-profile clients. Must
               have portfolio and experience with modern web design trends.
